- Implement tree structure endpoints for spaces and space types   - Add configuration for tree depth limits (SpaceTypeTreeConfig)   - Simplify controller APIs with streamlined CRUD operations   - Refactor DTOs: rename hierarchy responses to Raw classes for consistency   - Remove complex enums and modes, focusing on core functionality   - Add tree request/response classes for hierarchical data representation   - Update validation with custom validators (NullOrRange, etc.)   - Streamline service layer with improved parent-child relationships